Update scraper script:   - list project alphabetically   - apply automatic Python code style (mostly ' -> ")

--- a/.github/workflows/scrape_funding.yml
+++ b/.github/workflows/scrape_funding.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 pyyaml
+        pip install -r .github/scripts/funding/requirements.txt
 
     - name: Parse repositories
       env:
