--- a/.github/workflows/scrape_funding.yml
+++ b/.github/workflows/scrape_funding.yml
@@ -1,7 +1,9 @@
 name: Scrape Funding
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -33,7 +35,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add project_repos_links.json
-        git add index.html
+        git add project_repos_links.json index.html
         git commit -m "Update repository status" || echo "No changes to commit"
         git push
